# solana_project_2023

./: README.md  nft.yaml
program/: Cargo.toml
program/src/: burn.rs  mint.rs  transfer.rs
program/test/: mint.rs
program_client/: app.ts  package-lock.json  package.json
program_client/lib/: rpc.ts
